opam-version: "2.0"

synopsis: "Genealogy library and software"

maintainer: [ "Julien Sagot <julien.sagot@geneanet.org>" ]

authors: [ "Daniel de Rauglaudre" ]

homepage: "http://geneweb.org"

dev-repo: "git://github.com/geneweb/geneweb"

bug-reports: "https://github.com/geneweb/geneweb/issues"

build: [
  [ "./configure --api --sosa-zarith" ]
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" "-p" name "-j" jobs ] { with-test }
]

pin-depends: [
  [ "markup.dev" "git://github.com/geneanet/markup.ml" ]
]

depends: [
  "benchmark" { with-test }
  "camlp5" { build }
  "cppo" { build }
  "dune" { build >= "1.1.1" }
  "markup"
  "ocaml" { >= "4.05" }
  "ocurl"
  "piqi"
  "piqilib"
  "redis"
  "redis-sync"
  "yojson"
  "ounit" { with-test }
  "stdlib-shims"
  "zarith"
]
